--- a/Position/index.html
+++ b/Position/index.html
@@ -3,17 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vanilla CSS | 25</title>
+    <title>Positioning | CSS</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="block-01">
-        <h1>Vanilla CSS!</h1>
-        <p class="b1">Learn the fundamentals of CSS without any frameworks!</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo quia consequatur esse! Sed maiores fuga quibusdam, facere praesentium voluptatum, officia itaque officiis unde blanditiis mollitia, nesciunt inventore accusantium distinctio consequuntur.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo quia consequatur esse! Sed maiores fuga quibusdam, facere praesentium voluptatum, officia itaque officiis unde blanditiis mollitia, nesciunt inventore accusantium distinctio consequuntur.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo quia consequatur esse! Sed maiores fuga quibusdam, facere praesentium voluptatum, officia itaque officiis unde blanditiis mollitia, nesciunt inventore accusantium distinctio consequuntur.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo quia consequatur esse! Sed maiores fuga quibusdam, facere praesentium voluptatum, officia itaque officiis unde blanditiis mollitia, nesciunt inventore accusantium distinctio consequuntur.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo quia consequatur esse! Sed maiores fuga quibusdam, facere praesentium voluptatum, officia itaque officiis unde blanditiis mollitia, nesciunt inventore accusantium distinctio consequuntur.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo quia consequatur esse! Sed maiores fuga quibusdam, facere praesentium voluptatum, officia itaque officiis unde blanditiis mollitia, nesciunt inventore accusantium distinctio consequuntur.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo quia consequatur esse! Sed maiores fuga quibusdam, facere praesentium voluptatum, officia itaque officiis unde blanditiis mollitia, nesciunt inventore accusantium distinctio consequuntur.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo quia consequatur esse! Sed maiores fuga quibusdam, facere praesentium voluptatum, officia itaque officiis unde blanditiis mollitia, nesciunt inventore accusantium distinctio consequuntur.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo quia consequatur esse! Sed maiores fuga quibusdam, facere praesentium voluptatum, officia itaque officiis unde blanditiis mollitia, nesciunt inventore accusantium distinctio consequuntur.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo quia consequatur esse! Sed maiores fuga quibusdam, facere praesentium voluptatum, officia itaque officiis unde blanditiis mollitia, nesciunt inventore accusantium distinctio consequuntur.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo quia consequatur esse! Sed maiores fuga quibusdam, facere praesentium voluptatum, officia itaque officiis unde blanditiis mollitia, nesciunt inventore accusantium distinctio consequuntur.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo quia consequatur esse! Sed maiores fuga quibusdam, facere praesentium voluptatum, officia itaque officiis unde blanditiis mollitia, nesciunt inventore accusantium distinctio consequuntur.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo quia consequatur esse! Sed maiores fuga quibusdam, facere praesentium voluptatum, officia itaque officiis unde blanditiis mollitia, nesciunt inventore accusantium distinctio consequuntur.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo quia consequatur esse! Sed maiores fuga quibusdam, facere praesentium voluptatum, officia itaque officiis unde blanditiis mollitia, nesciunt inventore accusantium distinctio consequuntur.</p>
+    <div class="box01">
+        <div class="box02"></div>
     </div>
-    <div class="block-02">
-        <h2>Why Vanilla CSS?</h2>
-        <p>Using plain CSS helps you understand the core concepts without the abstraction of frameworks.</p>
-    </div>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo quia consequatur esse! Sed maiores fuga quibusdam, facere praesentium voluptatum, officia itaque officiis unde blanditiis mollitia, nesciunt inventore accusantium distinctio consequuntur.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo quia consequatur esse! Sed maiores fuga quibusdam, facere praesentium voluptatum, officia itaque officiis unde blanditiis mollitia, nesciunt inventore accusantium distinctio consequuntur.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo quia consequatur esse! Sed maiores fuga quibusdam, facere praesentium voluptatum, officia itaque officiis unde blanditiis mollitia, nesciunt inventore accusantium distinctio consequuntur.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo quia consequatur esse! Sed maiores fuga quibusdam, facere praesentium voluptatum, officia itaque officiis unde blanditiis mollitia, nesciunt inventore accusantium distinctio consequuntur.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo quia consequatur esse! Sed maiores fuga quibusdam, facere praesentium voluptatum, officia itaque officiis unde blanditiis mollitia, nesciunt inventore accusantium distinctio consequuntur.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo quia consequatur esse! Sed maiores fuga quibusdam, facere praesentium voluptatum, officia itaque officiis unde blanditiis mollitia, nesciunt inventore accusantium distinctio consequuntur.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo quia consequatur esse! Sed maiores fuga quibusdam, facere praesentium voluptatum, officia itaque officiis unde blanditiis mollitia, nesciunt inventore accusantium distinctio consequuntur.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo quia consequatur esse! Sed maiores fuga quibusdam, facere praesentium voluptatum, officia itaque officiis unde blanditiis mollitia, nesciunt inventore accusantium distinctio consequuntur.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo quia consequatur esse! Sed maiores fuga quibusdam, facere praesentium voluptatum, officia itaque officiis unde blanditiis mollitia, nesciunt inventore accusantium distinctio consequuntur.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo quia consequatur esse! Sed maiores fuga quibusdam, facere praesentium voluptatum, officia itaque officiis unde blanditiis mollitia, nesciunt inventore accusantium distinctio consequuntur.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo quia consequatur esse! Sed maiores fuga quibusdam, facere praesentium voluptatum, officia itaque officiis unde blanditiis mollitia, nesciunt inventore accusantium distinctio consequuntur.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo quia consequatur esse! Sed maiores fuga quibusdam, facere praesentium voluptatum, officia itaque officiis unde blanditiis mollitia, nesciunt inventore accusantium distinctio consequuntur.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo quia consequatur esse! Sed maiores fuga quibusdam, facere praesentium voluptatum, officia itaque officiis unde blanditiis mollitia, nesciunt inventore accusantium distinctio consequuntur.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo quia consequatur esse! Sed maiores fuga quibusdam, facere praesentium voluptatum, officia itaque officiis unde blanditiis mollitia, nesciunt inventore accusantium distinctio consequuntur.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo quia consequatur esse! Sed maiores fuga quibusdam, facere praesentium voluptatum, officia itaque officiis unde blanditiis mollitia, nesciunt inventore accusantium distinctio consequuntur.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo quia consequatur esse! Sed maiores fuga quibusdam, facere praesentium voluptatum, officia itaque officiis unde blanditiis mollitia, nesciunt inventore accusantium distinctio consequuntur.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo quia consequatur esse! Sed maiores fuga quibusdam, facere praesentium voluptatum, officia itaque officiis unde blanditiis mollitia, nesciunt inventore accusantium distinctio consequuntur.</p>
+    
+
 </body>
 </html>
