--- a/Glowing Navbar v1/index.html
+++ b/Glowing Navbar v1/index.html
@@ -8,6 +8,9 @@
 <body>
 
   <nav class="navbar">
+    <div class="logo-container">
+        <h3 class="logo">Shaheer Jamal Chishti</h3>
+    </div>
     <a href="#" class="nav-link">Home</a>
     <a href="#" class="nav-link">About</a>
     <a href="#" class="nav-link">Projects</a>
